Добавлен проект с бизнес-логикой

--- a/Archive/Archive.csproj
+++ b/Archive/Archive.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Archive.Application\Archive.Application.csproj" />
     <ProjectReference Include="..\Archive.Infrastructure\Archive.Infrastructure.csproj" />
   </ItemGroup>
 
