Добавление mastransit для rabbitmq. бибилиотеки для хранения моделей сообщений

--- a/Archive/appsettings.Development.json
+++ b/Archive/appsettings.Development.json
@@ -7,7 +7,13 @@
   },
 
   "ConnectionStrings": {
-    "ArchiveDB": "Host=localhost;Database=ArchiveDB;Username=postgres;Password=3542078"
+    "ArchiveDB": "Host=localhost;Database=ArchiveDB;Username=postgres;Password=****"
+  },
+
+  "RabbitMQ": {
+    "Host": "rabbitmq://localhost:5672",
+    "Username": "guest",
+    "Password": "guest"
   }
-  
+
 }
