--- a/Archive.Infrastructure/Archive.Infrastructure.csproj
+++ b/Archive.Infrastructure/Archive.Infrastructure.csproj
@@ -8,10 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="RabbitMQ\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.5.4" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,11 +21,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Archive.Domain\Archive.Domain.csproj" />
+    <ProjectReference Include="..\ArchiveContracts\ArchiveContracts.csproj" />
   </ItemGroup>
 
 </Project>
