Настройка логирования, вынесла rabbitmq в отдельный проект

--- a/Archive.Application/Archive.Application.csproj
+++ b/Archive.Application/Archive.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Archive.Infrastructure\Archive.Infrastructure.csproj" />
+  <ProjectReference Include="..\Archive.DataBase\Archive.DataBase.csproj" />
   </ItemGroup>
 
 </Project>
