--- a/Archive/appsettings.Development.json
+++ b/Archive/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "ArchiveDB": "Host=localhost;Database=ArchiveDB;Username=postgres;Password=****"
+    "ArchiveDB": "Host=localhost;Database=ArchiveDB;Username=postgres;Password=3542078"
   },
 
   "RabbitMQ": {
