--- a/Archive.Infrastructure/Archive.Infrastructure.csproj
+++ b/Archive.Infrastructure/Archive.Infrastructure.csproj
@@ -6,28 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MassTransit" Version="8.5.4" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.5.4" />		
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />	
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MassTransit" Version="8.5.4" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Archive.Domain\Archive.Domain.csproj" />
-    <ProjectReference Include="..\ArchiveContracts\ArchiveContracts.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Archive.Application\Archive.Application.csproj" />
+		<ProjectReference Include="..\Archive.DataBase\Archive.DataBase.csproj" />
+		<ProjectReference Include="..\Archive.Domain\Archive.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
